# textchain

./: Cargo.toml  README.md
UI/: Jchain.html  Jchain.js
frontend/: Jchain.js  index.html
src/: .mining.rs.swp  main.rs  mining.rs  model.rs  node.rs  serialization.rs  server.rs  util.rs  validation.rs
ui/: Jchain.css  Jchain.js  index.html
