[package]
name = "textchain"
version = "0.0.1-alpha.1"
authors = ["Alex Byrnes <alexbyrnes@protonmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.4"
bitcoin_hashes = "0.7.4"
rocket = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
